topn: fixing resize issue on firefox

--- a/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
+++ b/frontend/src/app/shared/modules/dynamic-widgets/components/topn-widget/topn-widget.component.scss
@@ -41,7 +41,7 @@
                 display: none;                                                  
                 font-size: 12px;                                                
                 padding: 5px;                                                  
-                position: fixed;                                             
+                position: absolute;                                             
                 min-width: 100px;                                                    
                 z-index: 10; 
                 top:10px;
